--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,10 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: ergo68_left
+    # cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
+    # artifact-name: ergo68_left_with_logging
   - board: nice_nano_v2
-    shield: corne_right
+    shield: ergo68_right
+    # cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
+    # artifact-name: ergo68_right_with_logging
