--- a/config/boards/shields/ergo68.conf
+++ b/config/boards/shields/ergo68.conf
@@ -4,3 +4,6 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+CONFIG_ZMK_KEYBOARD_NAME=ergo68
+CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
