--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: ergo68_left
   - board: nice_nano_v2
-    shield: corne_right
+    shield: ergo68_right
