--- a/build.yaml
+++ b/build.yaml
@@ -19,3 +19,7 @@ include:
     shield: caldera_right
   - board: nice_nano_v2
     shield: settings_reset
+  - board: nice_nano_v2
+    shield: ergo68_left
+  - board: nice_nano_v2
+    shield: ergo68_right
