--- a/config/boards/shields/ergo68/macro.dtsi
+++ b/config/boards/shields/ergo68/macro.dtsi
@@ -27,5 +27,29 @@
         <&macro_press &to MACRO_PLACEHOLDER>,
         <&macro_press &tog FUN>;
     };
+
+    cmac: change_mac {
+    wait-ms = <0>;
+    tap-ms = <0>;
+    compatible = "zmk,behavior-macro-two-param";
+    #binding-cells = <0>;
+    bindings = 
+        <&macro_press &bt BT_DISC 1>,
+        <&macro_press &bt BT_SEL 0>,
+        <&macro_press &to MAC>,
+        <&macro_press &tog FUN>;
+    };
+
+    cwin: change_windows {
+    wait-ms = <0>;
+    tap-ms = <0>;
+    compatible = "zmk,behavior-macro-two-param";
+    #binding-cells = <0>;
+    bindings = 
+        <&macro_press &bt BT_DISC 0>,
+        <&macro_press &bt BT_SEL 1>,
+        <&macro_press &to WIN>,
+        <&macro_press &tog FUN>;
+    };
   };
 };
