--- a/config/boards/shields/ergo68/macro.dtsi
+++ b/config/boards/shields/ergo68/macro.dtsi
@@ -31,7 +31,7 @@
     cmac: change_mac {
     wait-ms = <0>;
     tap-ms = <0>;
-    compatible = "zmk,behavior-macro-two-param";
+    compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
     bindings = 
         <&macro_press &bt BT_DISC 1>,
@@ -43,7 +43,7 @@
     cwin: change_windows {
     wait-ms = <0>;
     tap-ms = <0>;
-    compatible = "zmk,behavior-macro-two-param";
+    compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
     bindings = 
         <&macro_press &bt BT_DISC 0>,
