--- a/config/boards/shields/ergo68/ergo68.conf
+++ b/config/boards/shields/ergo68/ergo68.conf
@@ -7,3 +7,6 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_KEYBOARD_NAME="ergo68"
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
+CONFIG_ZMK_EXT_POWER=n
