try to fix windows problem

--- a/config/boards/shields/ergo68/ergo68.conf
+++ b/config/boards/shields/ergo68/ergo68.conf
@@ -10,3 +10,6 @@ CONFIG_ZMK_KEYBOARD_NAME="ergo68"
 CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_WS2812_STRIP=n
 CONFIG_ZMK_EXT_POWER=n
+CONFIG_BT_CTLR_PHY_2M=n
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
