--- a/config/boards/shields/ergo68/ergo68.conf
+++ b/config/boards/shields/ergo68/ergo68.conf
@@ -13,3 +13,5 @@ CONFIG_ZMK_EXT_POWER=n
 CONFIG_BT_CTLR_PHY_2M=n
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_MAX_CONN=3
+CONFIG_BT_MAX_PAIRED=3
