--- a/config/boards/shields/ergo68/ergo68.dtsi
+++ b/config/boards/shields/ergo68/ergo68.dtsi
@@ -24,7 +24,7 @@
         compatible = "zmk,kscan-gpio-matrix";
         diode-direction = "col2row";
         wakeup-source;
-
+        extra-gpios = <&gpio0 13 GPIO_ACTIVE_LOW>;
         row-gpios
             = <&pro_micro 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> 
             , <&pro_micro 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
