--- a/config/boards/shields/ergo68/ergo68.conf
+++ b/config/boards/shields/ergo68/ergo68.conf
@@ -10,6 +10,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_KEYBOARD_NAME="ergo68"
 CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_WS2812_STRIP=n
 CONFIG_ZMK_EXT_POWER=n
 CONFIG_BT_CTLR_PHY_2M=n
