--- a/config/boards/shields/ergo68/macro.dtsi
+++ b/config/boards/shields/ergo68/macro.dtsi
@@ -1,4 +1,5 @@
 #include "layer_define.dtsi"
+#include "dt-bindings/zmk/ext_power.h"
 
 / {
   macros {
@@ -34,7 +35,7 @@
     compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
     bindings = 
-        <&macro_tap &bt BT_SEL 0 &to MAC &tog FUN>;
+        <&macro_tap &bt BT_SEL 0 &to MAC &tog FUN &ext_power EP_OFF>;
     };
 
     cwin: change_windows {
@@ -43,7 +44,7 @@
     compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
     bindings = 
-        <&macro_tap &bt BT_SEL 1 &to WIN &tog FUN>;
+        <&macro_tap &bt BT_SEL 1 &to WIN &tog FUN &ext_power EP_OFF>;
     };
   };
 };
